2008-09-25  Tobias Burnus  <burnus@net-b.de>

PR fortran/37504
        * expr.c (gfc_check_pointer_assign): Allow assignment of
        protected pointers.
        * match.c (gfc_match_assignment,gfc_match_pointer_assignment):
        Remove unreachable code.

2008-09-25  Tobias Burnus  <burnus@net-b.de>

        PR fortran/37504
        * gfortran.dg/protected_7.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140663 138bc75d-0d04-0410-961f-82ee72b054a4